name:                denv
version:             0.1.1.0
synopsis:            A tool to help manage environments
description:         A tool to help manage environments
homepage:            https://github.com/denibertovic/denv#readme
license:             BSD3
license-file:        LICENSE
author:              Deni Bertovic
maintainer:          deni@denibertovic.com
copyright:           2017 Deni Bertovic
category:            Command Line Tool
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Denv.Lib, Denv.Types, Denv.Options
  other-modules:       Paths_denv
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , text
                     , directory
                     , filepath
                     , simple-download
  default-language:    Haskell2010

executable denv
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , denv
                     , optparse-applicative
  default-language:    Haskell2010

test-suite denv-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , denv
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/denibertovic/denv

